# catkin_ws

./: Tello_manual.py
src/: log
src/dronecontrol/: CMakeLists.txt  meuCmake.txt  package.xml
src/dronecontrol/include/dronecontrol/: UAV.h
src/dronecontrol/scripts/: .Rotate2.py.swp  1.py  Degree.py  Flying.py  Josedrone.py  Main.cpp  Quaternions.py  Rotate.py  Teste_Degree.py  UAV.cpp  integracao.py  log  optical_flow.py  voo_2m.py
src/dronecontrol/scripts/Vasculha/: Fmove.py  Fmove2.py  Version_1.py  WColor_grid.cpp
src/dronecontrol/src/: Battery.cpp  Delivery.cpp  Go_Mail_box.txt  Please_god.cpp  Read  Read_file.cpp  TEste.cpp  Talker.cpp  Talker_A.cpp  VERSAO_28_SET.cpp  control.cpp  grid velho.cpp  grid.cpp  putamelda.cpp
src/dronecontrol/src/MIssion/: Modelo_1.cpp
src/dronecontrol/state_machine/: ScriptSearch_test.py  Search2.py
src/indoor_imav/: package.xml
src/indoor_imav/launch/: indoor.launch
src/indoor_imav/models/droneponto/: model.config  model.sdf
src/indoor_imav/models/iris/: iris.sdf
src/indoor_imav/models/mesa/: model.config  model.sdf
src/indoor_imav/models/prateleira/: model.config  model.sdf
src/indoor_imav/models/rampa/: model.config  model.sdf
src/indoor_imav/worlds/: indoor_world.world
